force-app/main/default/objects/DE_Integration_Error__c/fields/IP_Reference__c.field-meta.xml
<CustomField>
    <fullName>IP_Reference__c</fullName>
    <label>Integration Point</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>IP-1</fullName>
            </value>
            <value>
                <fullName>IP-2</fullName>
            </value>
            <value>
                <fullName>IP-3</fullName>
            </value>
            <value>
                <fullName>IP-4</fullName>
            </value>
            <value>
                <fullName>IP-5</fullName>
            </value>
            <value>
                <fullName>IP-6</fullName>
            </value>
            <value>
                <fullName>IP-7</fullName>
            </value>
            <value>
                <fullName>BillingEvent Retry Failure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>