force-app/main/default/objects/DE_Integration_Error__c/fields/Request_Payload__c.field-meta.xml
<CustomField>
    <fullName>Request_Payload__c</fullName>
    <description>JSON payload sent to Odoo when the integration error occurred. Populated on callout failures to aid debugging.</description>
    <label>Request Payload</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>