force-app/main/default/objects/DE_Integration_Error__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Error_Message__c</columns>
    <columns>IP_Reference__c</columns>
    <columns>OBJECT_ID</columns>
    <columns>Record_Id__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>